# cpp_oti_lib

./: .gitignore  CMakeLists.txt  CPP_HEADER_ONLY_DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench_alignment.cpp  bench_alignment_source_update_gather.cpp  bench_arithmetic.cpp  bench_common.hpp  bench_fused.cpp  bench_layout.cpp  bench_shapes.def  elementary_scaling.cpp  plot_benchmark.py  run_benchmarks.py
benchmarks/results/: elementary_scaling.csv
bindings/python/: otinum_py.cpp
cmake/: otinumConfig.cmake.in
docs/: Doxyfile  conf.py  coverage.rst  cpp_oti_lib_documentation.bib  cpp_oti_lib_documentation.tex  index.rst  installation.rst  readme.rst  requirements.txt
docs/_static/: custom.css
docs/api/: choosing_m_and_n.rst  core.rst  detail.rst  functions.rst  generated.rst  index.rst  interop.rst  profile.rst  validity.rst
docs/benchmarks/: gpu_optimization_workflow.rst  heat_equation.rst  index.rst
docs/numerical_examples/: digital_twin.rst  digital_twin_gp.rst  heat_equation.rst  index.rst  one_dimensional.rst  surrogate.rst  two_dimensional.rst  uq_max_temperature.rst
docs/tutorials/: basic_usage.rst  cmake_package.rst  directional_derivatives.rst  float_coefficients.rst  index.rst  integration.rst  kokkos_cpu.rst  kokkos_gpu.rst  optimization_benchmarks.rst  plotting.rst  python_bindings.rst  soa_layout.rst  validity.rst
docs/tutorials/mpi/: accuracy.rst  convert.rst  cpu.rst  datatype_helper.rst  gpu.rst  index.rst  integration.rst  make_datatype.rst  message_volume.rst  scaling_and_accuracy.rst  verification.rst
docs/tutorials/mpi/converting/: device.rst  gather.rst  halo.rst  index.rst  reduce.rst  unstructured.rst
examples/: basic.cpp  directional_derivatives.cpp  float_coefficients.cpp  minimal.cpp  soa_layout.cpp  tutorial_basic.cpp  validity_intro.cpp
examples/mpi/convert/: CMakeLists.txt  README.md  convert_before.cpp
examples/mpi/device/: CMakeLists.txt  README.md  main.cpp
examples/mpi/gpu_toy/: CMakeLists.txt  README.md  mpi_oti_multigpu.cpp
examples/mpi/halo/: CMakeLists.txt  README.md  main.cpp  main_before.cpp  plot_diagram.py
examples/mpi/reduce/: CMakeLists.txt  README.md  main.cpp  main_before.cpp  plot_reduce_tree.py  plot_scaling.py  test_reduce_alignment.cpp  test_reduce_ops.cpp  test_reduce_promoted.cpp
examples/mpi/toy/: CMakeLists.txt  README.md  main.cpp  mpi_oti_scaling.cpp  plot_accuracy.py  test_mpi_datatype.cpp  verify_derivatives.cpp
examples/mpi/unstructured/: CMakeLists.txt  README.md  main.cpp  main_before.cpp
examples/python/: digital_twin_gp.py  one_dimensional.py  three_dimensional.py
examples/python/data/gp_bank/: bank_anchors.csv  bank_config.csv  bank_drift_truth.csv  bank_mc_truth.csv
examples/validity/: README.md  validity_examples.cpp
include/otinum/: core.hpp  functions.hpp  interop.hpp  mpi.hpp  otinum.hpp  profile.hpp  soa.hpp  taylor.hpp  validity.hpp
include/otinum/detail/: binom.hpp  kokkos_compat.hpp  multi_index.hpp
mpi_oti_convert/: CMakeLists.txt  README.md  convert_after.cpp  convert_before.cpp  plot_diagram.py
mpi_oti_gpu_toy/: CMakeLists.txt  README.md  main_gpu.cpp
mpi_oti_halo/: CMakeLists.txt  README.md  main.cpp  main_before.cpp  plot_diagram.py  plot_fd_error.py
mpi_oti_reduce/: CMakeLists.txt  README.md  main.cpp  main_before.cpp  mpi_oti_reduce_scaling.cpp  plot_reduce_tree.py  test_reduce_alignment.cpp  test_reduce_ops.cpp  test_reduce_promoted.cpp
mpi_oti_toy/: CMakeLists.txt  README.md  main.cpp  mpi_oti_scaling.cpp  plot_jet_slices.py  plot_scaling.py  test_mpi_datatype.cpp  test_mpi_validity.cpp  verify_derivatives.cpp
mpi_oti_unstructured/: CMakeLists.txt  README.md  main.cpp  plot_diagram.py
python_examples/: 1d_newton_raphson.py  benchmark_scaling.py  one_dimensional.py  two_dimensional.py
tests/: benchmark_operations.cpp  benchmark_soa_layout.cpp  run_unit_tests.sh  smoke.cpp  test_abs_large_shapes.cpp  test_comparisons.cpp  test_construction_access.cpp  test_edge_cases.cpp  test_exp_log_pow.cpp  test_float_coefficients.cpp  test_fused_ops.cpp  test_interop.cpp  test_kokkos_smoke.cpp  test_layout_tables.cpp  test_linear_arithmetic.cpp  test_multiplication_division.cpp  test_profile.cpp  test_python_bindings.py  test_soa_span.cpp  test_trig_hyperbolic.cpp  test_truncated_operations.cpp  test_utils.hpp  test_validity.cpp  test_validity_kokkos.cpp
tests/cmake_consumer/: CMakeLists.txt  main.cpp
validity_examples/: .gitignore  README.md  plot_validity_examples.py  validity_examples.cpp
