[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "otinum"
version = "0.1.0"
description = "Python bindings for the header-only static OTI number library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "cpp_oti_lib contributors" },
]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
    "breathe>=4.36",
    "gcovr>=7",
    "matplotlib>=3.8",
    "numpy>=1.24",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
